[package]
name = "clone_stackoverf_api_rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
rocket = { version="0.5.1", features=["json"] }
sqlx = { version = "0.8.1", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
thiserror = "2.0.3"
async-trait = "0.1.83"